Inputstream implementation added, TablePanel added